# jubbiopy

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: bot.py
src/: client.py  gateway.py  http.py  models.py  voice.py
src/jubbio/: __init__.py  client.py  exceptions.py  gateway.py  http.py  jubbio.py  models.py  voice.py
src/jubbio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
