[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jubbio"
dynamic = ["version"]
description = "Pure async Python client for the Jubbio platform (core + voice)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jubbio Contributors" }]
maintainers = [{ name = "Jubbio Contributors" }]
keywords = [
  "jubbio",
  "bot",
  "asyncio",
  "websocket",
  "voice",
  "chat",
  "aiohttp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
  "Framework :: AsyncIO",
]
dependencies = [
  "aiohttp>=3.9.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.4",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
publish = [
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/jubbio/jubbiopy"
Documentation = "https://github.com/jubbio/jubbiopy#readme"
Repository = "https://github.com/jubbio/jubbiopy"
Issues = "https://github.com/jubbio/jubbiopy/issues"
Changelog = "https://github.com/jubbio/jubbiopy/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["jubbio*"]
exclude = ["client*", "gateway*", "http*", "models*", "voice*"]

[tool.setuptools.dynamic]
version = { attr = "jubbio.__version__" }

[tool.setuptools.package-data]
"jubbio" = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
